another attempt to fix that damn scrollbar

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,4 @@
----
----
+
 
 
 @charset "UTF-8";
@@ -29,6 +28,7 @@ body {
    color: 	#9370DB;
    overflow: scroll;
    overflow-x: hidden;
+   overflow-y: scroll;
 }
 
 fieldset {
